# CUE4Parse

./: .gitmodules
.github/workflows/: build.yml
CUE4Parse/: CUE4Parse.csproj  JsonConverters.cs
CUE4Parse-Conversion/: CUE4Parse-Conversion.csproj  Constants.cs
CUE4Parse-Conversion/Animations/: AnimConverter.cs
CUE4Parse-Conversion/Landscape/: LandscapeExporter.cs
CUE4Parse-Conversion/Materials/: MaterialExporter2.cs
CUE4Parse-Conversion/Meshes/: Mesh.cs
CUE4Parse-Conversion/Meshes/glTF/: Gltf.cs  VertexColorXTextureX.cs
CUE4Parse-Conversion/Resources/: libdetex-arm64.so.0.1.2  libdetex-x86_64.so.0.1.2
CUE4Parse-Conversion/Resources/detex/detex-macos-arm64/: libdetex.dylib
CUE4Parse-Conversion/Resources/detex/detex-macos-x86_64/: libdetex.dylib
CUE4Parse-Conversion/Resources/detex/detex-windows-x86_64/: detex.lib
CUE4Parse-Conversion/Resources/tegra_swizzle/tegra_swizzle-macos-arm64/: libtegra_swizzle.dylib
CUE4Parse-Conversion/Resources/tegra_swizzle/tegra_swizzle-macos-x86_64/: libtegra_swizzle.dylib
CUE4Parse-Conversion/Sounds/VgmStream/: VgmStreamDecoder.cs
CUE4Parse-Conversion/Textures/: PlatformDeswizzlers.cs  TextureDecoder.cs  TextureEncoder.cs
CUE4Parse-Conversion/Textures/BC/: Detex.cs  DetexHelper.cs
CUE4Parse-Natives/: .gitignore  CMakeLists.txt  Features.cpp
CUE4Parse-Natives/Oodle/: CMakeLists.txt
CUE4Parse-Natives/VgmStream/: CMakeLists.txt  VgmStream.cpp
CUE4Parse-Natives/VgmStream/includes/: VgmStream.h
CUE4Parse.Example/: CUE4Parse.Example.csproj  Exporter.cs  Program.cs
CUE4Parse.Tests/: CUE4Parse.Tests.csproj
CUE4Parse/ACL/: CompressedTracks.cs
CUE4Parse/Compression/: Compression.cs  OodleHelper.cs  ZlibHelper.cs
CUE4Parse/FileProvider/: AbstractFileProvider.cs  ApkFileProvider.cs  DefaultFileProvider.cs
CUE4Parse/FileProvider/Objects/: GameFile.cs  OsGameFile.cs  StreamedGameFile.cs
CUE4Parse/FileProvider/Vfs/: AbstractVfsFileProvider.cs  FileProviderDictionary.cs
CUE4Parse/GameTypes/AshEchoes/FileProvider/: AshEchoesDefaultFileProvider.cs
CUE4Parse/GameTypes/DFHO/Kismet/: DFHOKismetExpression.cs
CUE4Parse/GameTypes/FF7/Objects/: FEndTextResourceStrings.cs
CUE4Parse/GameTypes/FN/Objects/: FConnectivityCube.cs
CUE4Parse/GameTypes/OtherGames/Objects/: Concord.cs  Nightingale.cs
CUE4Parse/GameTypes/WuWa/Kismet/: WuWaKismetExpression.cs
CUE4Parse/MappingsProvider/: JsonTypeMappingsProvider.cs
CUE4Parse/UE4/AssetRegistry/: FAssetRegistryState.cs
CUE4Parse/UE4/AssetRegistry/Objects/: FAssetData.cs  FAssetIdentifier.cs  FAssetPackageData.cs  FDependsNode.cs
CUE4Parse/UE4/Assets/: AbstractUePackage.cs  Package.cs
CUE4Parse/UE4/Assets/Exports/: UObject.cs  UObjectRedirector.cs
CUE4Parse/UE4/Assets/Objects/: FByteBulkData.cs  FByteBulkDataHeader.cs  FInstancedStruct.cs  FScriptStruct.cs  FStructFallback.cs  UScriptArray.cs  UScriptMap.cs  UScriptSet.cs
CUE4Parse/UE4/IO/: IoStoreReader.cs
CUE4Parse/UE4/IO/Objects/: FIoStoreTocResource.cs
CUE4Parse/UE4/Kismet/: KismetExpression.cs
CUE4Parse/UE4/Localization/: FTextLocalizationMetaDataResource.cs  FTextLocalizationResource.cs
CUE4Parse/UE4/Objects/ChaosCaching/: FCacheEventTrack.cs
CUE4Parse/UE4/Objects/ControlRig/: RigHierarchyElements.cs  RigHierarchyMetadata.cs
CUE4Parse/UE4/Objects/Engine/: MaterialExpression.cs  UBlueprintCore.cs  UBlueprintGeneratedClass.cs  ULevel.cs  UModel.cs  UUserDefinedStruct.cs  UWorld.cs
CUE4Parse/UE4/Objects/GameplayTags/: FGameplayTagContainer.cs
CUE4Parse/UE4/Objects/LevelSequence/: FLevelSequenceObjectReferenceMap.cs
CUE4Parse/UE4/Objects/MediaAssets/: UBaseMediaSource.cs
CUE4Parse/UE4/Objects/Meshes/: FColorVertexBuffer.cs  FMeshUVFloat.cs  FPositionVertexBuffer.cs
CUE4Parse/UE4/Objects/MovieScene/: FMovieSceneChannel.cs  FMovieSceneSequenceInstanceDataPtr.cs  FMovieSceneTimeWarpVariant.cs
CUE4Parse/UE4/Objects/NavigationSystem/: UNavCollision.cs
CUE4Parse/UE4/Objects/Niagara/: FNiagaraDataInterfaceGeneratedFunction.cs  UNiagaraSystem.cs
CUE4Parse/UE4/Objects/PCG/: FPCGMetadataAttribute.cs
CUE4Parse/UE4/Objects/Particles/: UParticleModuleRequired.cs  USubUVAnimation.cs
CUE4Parse/UE4/Objects/PhysicsEngine/: UBodySetup.cs  UPhysicsAsset.cs
CUE4Parse/UE4/Objects/RenderCore/: FPackedNormal.cs  (+1 more)
CUE4Parse/UE4/Pak/: PakFileReader.cs
CUE4Parse/UE4/Plugins/: UPluginManifest.cs
CUE4Parse/UE4/Readers/: FArchive.cs  FByteArchive.cs  FPointerArchive.cs  FStreamArchive.cs
CUE4Parse/UE4/Shaders/: FIoStoreShaderCodeArchive.cs  FSerializedShaderArchive.cs  FShaderCodeArchive.cs
CUE4Parse/UE4/Versions/: EGame.cs  VersionContainer.cs
CUE4Parse/UE4/VirtualFileSystem/: AbstractVfsReader.cs
CUE4Parse/UE4/Wwise/: WwiseProvider.cs  WwiseReader.cs  WwiseVersions.cs
CUE4Parse/Utils/: ArbitraryVersion.cs  CUE4Parse-Natives.cs  SevenZipUtils.cs  StellaUtils.cs
go-reader/: .gitignore  DEPLOYMENT.md  IMPLEMENTATION.md  Makefile  README.md  go.mod
go-reader/cmd/reader/: main.go
go-reader/pkg/compression/: compression.go
go-reader/pkg/crypto/: marvel_aes.go  tables.go
go-reader/pkg/pak/: reader.go
go-reader/pkg/utoc/: reader.go
(+264 files in other folders)
